Update URL in ping workflow to new endpoint

--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - name: Ping Render app
         run: |
-          curl -X GET https://plmp-be.onrender.com
+          curl -X GET https://plmp-be-f3qy.onrender.com
