--- a/requirements.txt
+++ b/requirements.txt
@@ -30,3 +30,6 @@ typing-extensions==4.12.2
 tzdata==2025.1
 python-dotenv==1.0.1
 chardet==5.2.0
+intuit-oauth==1.2.5
+python-quickbooks==0.9.7
+requests-oauthlib==1.3.1
